card back visiblity fixed - card flip working

--- a/GamesApp/GamesApp/wwwroot/css/site.css
+++ b/GamesApp/GamesApp/wwwroot/css/site.css
@@ -98,6 +98,7 @@ body {
 .faces {
     position: relative;
     width: 100%;
+    transform-style: preserve-3d;
 }
 
 .face {
@@ -120,7 +121,13 @@ body {
 
 .back {
     transform: rotateY(180deg);
-    background-image: url('../img/back.jpg');
+    background-image: url('../../img/back.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
 }
 
 .face img {
